Add a hero section to index.html file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,32 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <div class="logo">
+        <img src="./assets/logoBig.png" alt="Menu logo">
+        <h1>We Provide The Best Food At the Right Price</h1>
+    </div>
+    <section>
+        <div class="hero">
+            <div id="container">
+                <div id="item-1">
+                    <p>Happy Hour</p>
+                </div>
+                <div id="item-2">
+                    <p>Party Time</p>
+                </div>
+                <div id="two">
+                    <p>Breakfast</p>
+                </div>
+                <div id="three">
+                    <p>Launch</p>
+                </div>
+                <div id="four">
+                    <p>Dinner</p>
+                </div>
+
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
