Add gallery,menu and customer sections

--- a/index.html
+++ b/index.html
@@ -34,6 +34,70 @@
             </div>
         </div>
     </section>
-    
+    <section>
+        <div class="food-gallery">
+            <img src="./assets/fastFood1.jpg" alt="food">
+            <img src="./assets/fastFood2.jpg" alt="food">
+
+            <h1>Fast Food</h1>
+            <h2>You'll love our delicious fast food</h2>
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi cumque ducimus at veritatis suscipit! Modi sed tenetur nobis asperiores? Reprehenderit officiis, voluptate voluptates nemo qui deserunt exercitationem quo unde ab?
+            </p>
+            <button type="button">VIEW GALLERY</button>
+        </div>
+        <div class="drinks-gallery">
+            <img src="./assets/drink1.jpg" alt="drinks">
+            <img src="./assets/drink2.jpg" alt="drinks">
+
+            <h1>Fast Food</h1>
+            <h2>You'll love our delicious fast food</h2>
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi cumque ducimus at veritatis suscipit! Modi sed tenetur nobis asperiores? Reprehenderit officiis, voluptate voluptates nemo qui deserunt exercitationem quo unde ab?
+            </p>
+            <button type="button">VIEW GALLERY</button>
+        </div>
+    </section>
+    <section>
+        <div class="menu-container">
+            <h2>Fast Food</h2>
+            <h2>Drinks</h2>
+            <h2>Chicken</h2>
+            <h2>Rice</h2>
+            <div>
+                <img src="./assets/fastfood/chickenBurger.jpg" alt="chicken burger">
+                <h3>Chicken burger</h3>
+                <img src="./assets/fastfood/beefBurger.jpg" alt=" beef burger">
+                <h3>Beef Burger</h3>
+                <img src="./assets/fastfood/chickenPizza.jpg" alt=" chicken Pizza">
+                <h3>Chicken Pizza</h3>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="customer">
+            <h2>Our Happy Customer</h2>
+            <h3>George Richard</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla fugit id aspernatur ut in, natus distinctio, iure laudantium incidunt perspiciatis, autem necessitatibus debitis aliquam? Dolores debitis minima consectetur aliquid accusamus!</p>
+            <img src="./assets/customers/p1.png" alt="person 1">
+            <img src="./assets/customers/p2.png" alt="person 2">
+            <img src="./assets/customers/p3.png" alt="person 3">
+
+        </div>
+        <div class="about">
+            <h2>About Menu</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum velit vitae totam tenetur nam veritatis a iure labore earum dolorem assumenda id, quas esse voluptatum accusantium modi repellat! Iure, quia!</p>
+        </div>
+    </section>
+    <section>
+        <div class="subscribe">
+            <form action="">
+                <h2>Get our daily food items delivered to your email</h2>
+                <input type="text">
+                <label for="subcribe">Subscribe</label>
+            </form>
+        </div>
+    </section>
+
 </body>
 </html>
