Modify the form by adding placeholders

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi cumque ducimus at veritatis suscipit! Modi sed tenetur nobis asperiores? Reprehenderit officiis, voluptate voluptates nemo qui deserunt exercitationem quo unde ab?
             </p>
-            <button type="button">VIEW GALLERY</button>
+            <button type="button">VIEW GALLERY&#8594;</button>
         </div>
         <div class="drinks-gallery">
             <img src="./assets/drink1.jpg" alt="drinks">
@@ -55,7 +55,7 @@
             <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi cumque ducimus at veritatis suscipit! Modi sed tenetur nobis asperiores? Reprehenderit officiis, voluptate voluptates nemo qui deserunt exercitationem quo unde ab?
             </p>
-            <button type="button">VIEW GALLERY</button>
+            <button type="button">VIEW GALLERY&#8594;</button>
         </div>
     </section>
     <section>
@@ -79,9 +79,11 @@
             <h2>Our Happy Customer</h2>
             <h3>George Richard</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla fugit id aspernatur ut in, natus distinctio, iure laudantium incidunt perspiciatis, autem necessitatibus debitis aliquam? Dolores debitis minima consectetur aliquid accusamus!</p>
+            <p>Right arrow: <i class="arrow right"></i></p>
             <img src="./assets/customers/p1.png" alt="person 1">
             <img src="./assets/customers/p2.png" alt="person 2">
             <img src="./assets/customers/p3.png" alt="person 3">
+            <p>Left arrow: <i class="arrow left"></i></p>
 
         </div>
         <div class="about">
@@ -93,7 +95,7 @@
         <div class="subscribe">
             <form action="">
                 <h2>Get our daily food items delivered to your email</h2>
-                <input type="text">
+                <input type="text" placeholder="Your email" id="email">
                 <label for="subcribe">Subscribe</label>
             </form>
         </div>
