--- a/index.html
+++ b/index.html
@@ -100,6 +100,17 @@
             </form>
         </div>
     </section>
+    <footer>
+        <div class="contact">
+            <img src="./assets/footerlogos/logo_white.png" alt="white logo">
+            <h1>MENU</h1>
+            <H2>Thats What We Are</H2>
+            <img src="./assets/footerlogos/facebook.png" alt="facebook">
+            <img src="./assets/footerlogos/twitter.png" alt="twitter">
+            <img src="./assets/footerlogos/pinterest.png" alt="pinterest">
+            <p>2016 Menu Restaurant</p>
+        </div>
+    </footer>
 
 </body>
 </html>
