Modify index.html & style.css files

--- a/index.html
+++ b/index.html
@@ -8,43 +8,49 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div class="logo">
+   <section class="landing">
+     <div class="logo">
         <img src="./assets/logoBig.png" alt="Menu logo">
-        <h1>We Provide The Best Food At the Right Price</h1>
-    </div>
-    <section>
+        <p>We Provide The Best Food <br> At The <span>Right Price</span></p>
+        
+        
+     </div>
+   </section>
+    <section class="hero-section">
         <div class="hero">
-            <div id="container">
-                <div id="item-1">
-                    <p>Happy Hour</p>
+            <div class="container">
+                <div class="container-1">
+                <div class="item-1">
+                    <h4 id="happy">Happy Hour</h4>
                 </div>
-                <div id="item-2">
-                    <p>Party Time</p>
+                <div class="item-2">
+                    <h4>Party Time</h4>
                 </div>
-                <div id="two">
-                    <p>Breakfast</p>
                 </div>
-                <div id="three">
-                    <p>Launch</p>
+                <div class="item-3">
+                    <h4>Breakfast</h4>
                 </div>
-                <div id="four">
-                    <p>Dinner</p>
+                <div class="item-4">
+                    <h4>Launch</h4>
                 </div>
-
+                <div class="item-5">
+                    <h4>Dinner</h4>
+                </div>
             </div>
         </div>
     </section>
     <section>
         <div class="food-gallery">
+            <div class="food">
             <img src="./assets/fastFood1.jpg" alt="food">
             <img src="./assets/fastFood2.jpg" alt="food">
-
+            </div>
             <h1>Fast Food</h1>
             <h2>You'll love our delicious fast food</h2>
             <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi cumque ducimus at veritatis suscipit! Modi sed tenetur nobis asperiores? Reprehenderit officiis, voluptate voluptates nemo qui deserunt exercitationem quo unde ab?
             </p>
-            <button type="button">VIEW GALLERY&#8594;</button>
+            <button type="button">VIEW GALLERY &#8594;</button>
         </div>
         <div class="drinks-gallery">
             <img src="./assets/drink1.jpg" alt="drinks">
@@ -55,7 +61,7 @@
             <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi cumque ducimus at veritatis suscipit! Modi sed tenetur nobis asperiores? Reprehenderit officiis, voluptate voluptates nemo qui deserunt exercitationem quo unde ab?
             </p>
-            <button type="button">VIEW GALLERY&#8594;</button>
+            <button type="button">VIEW GALLERY &#8594;</button>
         </div>
     </section>
     <section>
