Modified the food section

--- a/index.html
+++ b/index.html
@@ -41,16 +41,18 @@
     </section>
     <section>
         <div class="food-gallery">
-            <div class="food">
+            <div class="gallery-container">
             <img src="./assets/fastFood1.jpg" alt="food">
             <img src="./assets/fastFood2.jpg" alt="food">
             </div>
+            <div class="fast-food">
             <h1>Fast Food</h1>
             <h2>You'll love our delicious fast food</h2>
             <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi cumque ducimus at veritatis suscipit! Modi sed tenetur nobis asperiores? Reprehenderit officiis, voluptate voluptates nemo qui deserunt exercitationem quo unde ab?
             </p>
             <button type="button">VIEW GALLERY &#8594;</button>
+            </div>
         </div>
         <div class="drinks-gallery">
             <img src="./assets/drink1.jpg" alt="drinks">
