Modify the food section

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anitas Kitchen</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!--Home section-->
    <section class="landing">
      <div class="logo">
         <img src="./assets/logoBig.png" alt="Menu logo">
@@ -16,6 +18,7 @@
         
      </div>
    </section>
+   <!--Hero section-->
     <section class="hero-section">
         <div class="hero">
             <div class="container">
@@ -40,6 +43,7 @@
         </div>
     </section>
     <section>
+        <!--Food section-->
         <div class="food-gallery">
             <div class="gallery-container">
             <img src="./assets/fastFood1.jpg" alt="food">
@@ -54,19 +58,21 @@
             <button type="button">VIEW GALLERY &#8594;</button>
             </div>
         </div>
-        <div class="drinks-gallery">
+        <div class="drinks">
             <img src="./assets/drink1.jpg" alt="drinks">
             <img src="./assets/drink2.jpg" alt="drinks">
-
-            <h1>Fast Food</h1>
-            <h2>You'll love our delicious fast food</h2>
+            <div class="drinks-items">
+            <h1>Drinks</h1>
+            <h2>We also produce delicious drinks</h2>
             <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi cumque ducimus at veritatis suscipit! Modi sed tenetur nobis asperiores? Reprehenderit officiis, voluptate voluptates nemo qui deserunt exercitationem quo unde ab?
             </p>
             <button type="button">VIEW GALLERY &#8594;</button>
+            </div>
         </div>
     </section>
     <section>
+        <!--Menu section-->
         <div class="menu-container">
             <h2>Fast Food</h2>
             <h2>Drinks</h2>
@@ -83,6 +89,7 @@
         </div>
     </section>
     <section>
+        <!--Customer section-->
         <div class="customer">
             <h2>Our Happy Customer</h2>
             <h3>George Richard</h3>
@@ -99,7 +106,8 @@
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum velit vitae totam tenetur nam veritatis a iure labore earum dolorem assumenda id, quas esse voluptatum accusantium modi repellat! Iure, quia!</p>
         </div>
     </section>
-    <section>
+    <section class="subscribe-section">
+        <!--Subscribe section-->
         <div class="subscribe">
             <form action="">
                 <h2>Get our daily food items delivered to your email</h2>
@@ -109,6 +117,7 @@
         </div>
     </section>
     <footer>
+        <!--Footer section-->
         <div class="contact">
             <img src="./assets/footerlogos/logo_white.png" alt="white logo">
             <h1>MENU</h1>
